# tojson

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: main.rs
testfiles/: file.json  file.pretty.json  file.pretty.toml  file.toml  file.yaml  input.toml  input.yaml  output.toml.json  output.toml.pretty.json  output.yaml.json  output.yaml.pretty.json
