[package]
name = "tojson"
version = "0.1.4"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"
description = "Convert from toml and yaml to json"
license = "Apache-2.0"
homepage = "https://github.com/meain/tojson"
repository = "https://github.com/meain/tojson"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.110"
serde_json = "1.0.53"
toml = "0.5.6"
serde_yaml = "0.8.12"
structopt = "0.3.14"
