[package]
name = "tojson"
version = "0.3.1"
authors = ["Abin Simon <abinsimon10@gmail.com>"]
edition = "2018"
description = "Convert between toml, yaml and json"
license = "Apache-2.0"
homepage = "https://github.com/meain/tojson"
repository = "https://github.com/meain/tojson"
readme = "README.md"
include = ["src/main.rs", "README.md"]

[dependencies]
serde = "1.0.110"
serde_json = { version = "1.0.53", features = ["preserve_order"] }
toml = "0.5.6"
serde_yaml = "0.8.12"
structopt = "0.3.14"
